--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-session": "^1.17.2",
     "express-validator": "^6.14.0",
     "http-errors": "~1.6.3",
+    "method-override": "^3.0.0",
     "mongoose": "^6.1.1",
     "morgan": "~1.9.1",
     "passport": "^0.5.0",
