--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "express-session": "^1.17.2",
     "express-validator": "^6.14.0",
     "http-errors": "~1.6.3",
+    "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
     "mongoose": "^6.1.1",
     "morgan": "~1.9.1",
     "passport": "^0.5.0",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
